# heco

./: .gitignore  README.md  ae.cabal  build.sh  cabal.project  error.txt  prompt copy.txt  prompt.txt  repl.sh  spin.toml  test copy.json  test.csv  test.json  test.md  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: haskell.yml
ae-sia/Ae/: Sia.hs
ae-sia/Ae/Sia/: SiaCompute.hs  SiaQuery.hs  SiaWorld.hs  Types.hs
ae-sia/Ae/Sia/SiaQuery/: Entity.hs
ae-sinta/Ae/: Sinta.hs
ae-sinta/Ae/Sinta/: Prelude.hs  TH.hs
ae-sinta/Ae/Sinta/Internal/: Core.hs  Types.hs
app/: Main.hs
heco/: heco.cabal
heco-account/: CHANGELOG.md  heco-account.cabal
heco-account/Heco/Data/: AccountError.hs  LoginConfig.hs  Privilege.hs  Session.hs  User.hs
heco-account/Heco/Effectful/: AccountService.hs  PrivilegeService.hs  SessionContext.hs
heco-account/Heco/Effectful/AccountService/: Ldap.hs
heco-account/src/Heco/Data/: AccountError.hs  AuthGroup.hs  Session.hs  User.hs
heco-account/src/Heco/Effectful/: AccountService.hs  PrivilegeService.hs  SessionContext.hs
heco-account/src/Heco/Effectful/AccountService/: Ldap.hs
heco-account/src/Heco/Events/: AccountEvent.hs
heco-agent/: heco-agent.cabal
heco-agent/src/Heco/Data/: AgentError.hs
heco-agent/src/Heco/Data/Immanant/: Memory.hs  Terminal.hs
heco-agent/src/Heco/Effectful/: Agent.hs
heco-agent/src/Heco/Events/: AgentEvent.hs
heco-auth/Heco/Data/: AuthError.hs  AuthGroup.hs  Session.hs
heco-auth/Heco/Effectful/: AuthService.hs  SessionService.hs  UserService.hs
heco-auth/Heco/Effectful/AuthService/: Ldap.hs
heco-common/: heco-common.cabal
heco-common/Heco/Data/: Aeson.hs  Default.hs  Record.hs
heco-common/Heco/Effectful/: Exception.hs  HTTP.hs
heco-common/Heco/Network/HTTP/: Client.hs
heco-common/src/Heco/Conduit/: Concurrent.hs
heco-common/src/Heco/Data/: Aeson.hs  MonoHFunctor.hs  Record.hs  Typelits.hs  Unique.hs
heco-common/src/Heco/Data/Aeson/: TH.hs
heco-common/src/Heco/Effectful/: Exception.hs  HTTP.hs
heco-common/src/Heco/Network/HTTP/: Client.hs
heco-database/: CHANGELOG.md  heco-database.cabal
heco-database/Heco/Data/: Collection.hs  DatabaseError.hs  Entity.hs
heco-database/Heco/Data/Entity/: TH.hs
heco-database/Heco/Effectful/: DatabaseService.hs
heco-database/Heco/Effectful/DatabaseService/: Milvus.hs
heco-database/src/Heco/Data/: Collection.hs  DatabaseError.hs  Entity.hs
heco-database/src/Heco/Data/Entity/: TH.hs
heco-database/src/Heco/Effectful/: DatabaseService.hs
heco-database/src/Heco/Effectful/DatabaseService/: Milvus.hs
heco-database/src/Heco/Events/: DatabaseEvent.hs
heco-ego/: heco-ego.cabal
heco-ego/Heco/Data/: EgoError.hs
heco-ego/Heco/Data/Immanant/: Memory.hs  Terminal.hs
heco-ego/Heco/Effectful/: Ego.hs
heco-ego/Heco/Effectful/Ego/: Heco.hs
heco-ego/Heco/Events/: EgoEvent.hs
heco-ego/src/Heco/Data/: EgoError.hs
heco-ego/src/Heco/Data/Immanant/: Memory.hs  Terminal.hs
heco-ego/src/Heco/Effectful/Ego/: Heco.hs
heco-ego/src/Heco/Events/: EgoEvent.hs
heco-event/: heco-event.cabal
heco-event/Heco/Effectful/: Event.hs
heco-event/src/Heco/Effectful/: Event.hs
heco-language/: heco-language.cabal
heco-language/Heco/Data/: Embedding.hs  Embeddings.hs  FunctionSchema.hs  LanguageError.hs  LanguageToolError.hs  Message.hs  Model.hs  Role.hs
heco-language/Heco/Effectful/: LanguageService.hs  LanguageToolProvider.hs
heco-language/Heco/Effectful/LanguageService/: Common.hs  Ollama.hs  OpenAI.hs
heco-language/Heco/Effectful/LanguageToolProvider/: Simple.hs
heco-language/Heco/Events/: LanguageEvent.hs
heco-language/src/Heco/Data/: Embedding.hs  FunctionSchema.hs  LanguageError.hs  LanguageTool.hs  LanguageToolError.hs  LanguageToolRegistry.hs  Message.hs  Model.hs
heco-language/src/Heco/Data/FunctionSchema/: JSON.hs
heco-language/src/Heco/Effectful/: LanguageService.hs  LanguageToolProvider.hs
heco-language/src/Heco/Effectful/LanguageService/: Common.hs  Ollama.hs  OpenAI.hs
heco-language/src/Heco/Effectful/LanguageToolProvider/: MCP.hs  Native.hs
heco-language/src/Heco/Events/: LanguageEvent.hs
heco-multitask/: LICENSE  heco-multitask.cabal
heco-multitask/src/Heco/Data/: Task.hs  TaskError.hs
heco-multitask/src/Heco/Effectful/: TaskService.hs
heco-multitask/src/Heco/Events/: TaskEvent.hs
heco-portal/: heco-portal.cabal
heco-portal-shell/: heco-portal-shell.cabal
heco-portal-shell/src/Heco/Data/Portal/: Shell.hs
heco-portal/src/Heco/Data/: Portal.hs
heco-portal/src/Heco/Data/Portal/: OneBot.hs  Shell.hs
heco-portal/src/Heco/Effectful/: PortalService.hs
heco-subjectivity/: heco-subjectivity.cabal
heco-subjectivity/Heco/Data/: InternalTimeStreamError.hs  Memory.hs  Noema.hs  TimePhase.hs
heco-subjectivity/Heco/Effectful/: InternalTimeStream.hs
heco-subjectivity/Heco/Effectful/InternalTimeStream/: RingBuffer.hs
heco-subjectivity/Heco/Events/: InternalTimeStreamEvent.hs
heco-subjectivity/src/Heco/Data/: InternalTimeStreamError.hs  Noema.hs  TimePhase.hs
heco-subjectivity/src/Heco/Data/Immanant/: Action.hs  Referent.hs  SenseData.hs
heco-subjectivity/src/Heco/Effectful/: InternalTimeStream.hs
heco-subjectivity/src/Heco/Effectful/InternalTimeStream/: RingBuffer.hs
heco-subjectivity/src/Heco/Events/: InternalTimeStreamEvent.hs
heco/app/: Main.hs
heco/prompts/: character.md  memorize.md  task.md
heco/prompts/characters/: heco.md
heco/scripts/: create_archive_database.py  search_archive_database.py
heco/src/Heco/: Agent.hs
heco/src/Heco/Agent/: AuthGroups.hs  Options.hs
heco/src/Heco/Agent/LanguageTools/: Archives.hs  Downloader.hs
heco/src/Heco/Effectful/Agent/: Heco.hs
heco/src/Heco/Effectful/Ego/: Heco.hs
prompts/: association.md  character.md  interaction_main.md  retention.md  urimpression.md
src/: Lib.hs
