cabal-version: 3.0

name:           heco-database
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sicusa/heco#readme>
homepage:       https://github.com/sicusa/heco#readme
bug-reports:    https://github.com/sicusa/heco/issues
author:         Phlamcenth Sicusa
maintainer:     sicusa@gilatod.art
copyright:      2024 Phlamcenth Sicusa
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/sicusa/heco

common defaults
  default-extensions:
    BlockArguments
    LexicalNegation
    RecordWildCards
    OverloadedRecordDot
    OverloadedLabels
    OverloadedStrings
    DuplicateRecordFields
    NoFieldSelectors
    TypeFamilies
    AllowAmbiguousTypes
    TemplateHaskell
    Strict
    DerivingVia
    DeriveAnyClass
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-ambiguous-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: defaults
  default-language: GHC2024
  hs-source-dirs: src
  exposed-modules:
    Heco.Data.Entity,
    Heco.Data.Entity.TH,
    Heco.Data.Collection,
    Heco.Data.DatabaseError,
    Heco.Events.DatabaseEvent,
    Heco.Effectful.DatabaseService,
    Heco.Effectful.DatabaseService.Milvus
  build-depends:
    base,
    template-haskell,
    effectful,
    effectful-core,
    effectful-th,
    vector,
    unboxing-vector,
    text,
    data-default,
    hashable,
    cast,
    aeson,
    http-client,
    http-client-tls,
    heco-common,
    heco-event