cabal-version: 3.0

name:           heco-language
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sicusa/heco#readme>
homepage:       https://github.com/sicusa/heco#readme
bug-reports:    https://github.com/sicusa/heco/issues
author:         Phlamcenth Sicusa
maintainer:     sicusa@gilatod.art
copyright:      2024 Phlamcenth Sicusa
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/sicusa/heco

common defaults
  default-extensions:
    BlockArguments
    LexicalNegation
    RecordWildCards
    OverloadedRecordDot
    OverloadedLabels
    OverloadedStrings
    DuplicateRecordFields
    NoFieldSelectors
    TypeFamilies
    AllowAmbiguousTypes
    TemplateHaskell
    Strict
    DerivingVia
    DeriveAnyClass
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-ambiguous-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: defaults
  default-language: GHC2024
  hs-source-dirs: src
  exposed-modules:
    Heco.Data.Model,
    Heco.Data.Message,
    Heco.Data.Role,
    Heco.Data.FunctionSchema,
    Heco.Data.LanguageTool,
    Heco.Data.LanguageError,
    Heco.Data.LanguageToolError,
    Heco.Data.Embedding,
    Heco.Events.LanguageEvent,
    Heco.Effectful.LanguageToolProvider,
    Heco.Effectful.LanguageToolProvider.Native,
    Heco.Effectful.LanguageToolProvider.MCP,
    Heco.Effectful.LanguageService,
    Heco.Effectful.LanguageService.Common,
    Heco.Effectful.LanguageService.Ollama,
    Heco.Effectful.LanguageService.OpenAI
  build-depends:
    base,
    extra,
    effectful-core,
    effectful-th,
    vector,
    unboxing-vector,
    containers,
    unordered-containers,
    text,
    data-default,
    hashable,
    cast,
    aeson,
    http-client,
    http-conduit,
    scientific,
    lrucache,
    conduit,
    uuid,
    time,
    network-uri,
    bytestring,
    heco-common,
    heco-event