cabal-version: 3.0

name:           heco-subjectivity
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sicusa/heco#readme>
homepage:       https://github.com/sicusa/heco#readme
bug-reports:    https://github.com/sicusa/heco/issues
author:         Phlamcenth Sicusa
maintainer:     sicusa@gilatod.art
copyright:      2024 Phlamcenth Sicusa
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/sicusa/heco

common defaults
  default-extensions:
    BlockArguments
    LexicalNegation
    RecordWildCards
    OverloadedRecordDot
    OverloadedLabels
    OverloadedStrings
    DuplicateRecordFields
    NoFieldSelectors
    TypeFamilies
    AllowAmbiguousTypes
    TemplateHaskell
    Strict
    DerivingVia
    DeriveAnyClass
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-ambiguous-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: defaults
  default-language: GHC2024
  hs-source-dirs: src
  exposed-modules:
    Heco.Data.Noema,
    Heco.Data.TimePhase,
    Heco.Data.Immanant.SenseData,
    Heco.Data.Immanant.Action,
    Heco.Data.Immanant.Referent,
    Heco.Data.InternalTimeStreamError,
    Heco.Effectful.InternalTimeStream,
    Heco.Effectful.InternalTimeStream.RingBuffer,
    Heco.Events.InternalTimeStreamEvent
  build-depends:
    base,
    extra,
    effectful,
    effectful-core,
    effectful-th,
    vector,
    text,
    hashable,
    cast,
    aeson,
    ring-buffer,
    heco-event