cabal-version: 3.0

name:           heco
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sicusa/heco#readme>
homepage:       https://github.com/sicusa/heco#readme
bug-reports:    https://github.com/sicusa/heco/issues
author:         Phlamcenth Sicusa
maintainer:     sicusa@gilatod.art
copyright:      2024 Phlamcenth Sicusa
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/sicusa/heco

common defaults
  default-extensions:
    BlockArguments
    LexicalNegation
    RecordWildCards
    OverloadedRecordDot
    OverloadedLabels
    OverloadedStrings
    DuplicateRecordFields
    NoFieldSelectors
    TypeFamilies
    AllowAmbiguousTypes
    TemplateHaskell
    Strict
    DerivingVia
    DeriveAnyClass
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-ambiguous-fields
    -Wredundant-constraints
    -Wunused-packages

executable heco
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -O2
  default-language: GHC2024
  build-depends:
    base,
    effectful,
    effectful-core,
    resourcet-effectful,
    vector,
    unboxing-vector,
    unordered-containers,
    text,
    data-default,
    cast,
    aeson,
    xml-conduit,
    heco-common,
    heco-event,
    heco-account,
    heco-language,
    heco-database,
    heco-subjectivity,
    heco-ego,
    heco-portal

test-suite heco-tests
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
    heco
  default-language: GHC2024
  hs-source-dirs: test